<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Nasdaq100</string>
    <string name="activity_viewer">Details</string>
    <string name="activity_preferences">Preferences</string>
    <string name="menu_show_stockinfo">Stockinfo</string>
    <string name="menu_show_settings">Settings</string>
    <string name="menu_sort_by_symbol">Sort by symbol</string>
    <string name="menu_sort_by_weighting">Sort by weighting</string>
    <string name="list_item_percent">%</string>
    <string name="placeholder_id">15</string>
    <string name="placeholder_symbol">CHKP</string>
    <string name="placeholder_company">Check Point</string>
    <string name="placeholder_weighting">12.20</string>
    <string name="placeholder_version">1.0</string>
    <string name="logo_description">Company logo</string>
    <string name="menu_clear_cache">Clear cache</string>
    <string name="prefs_language_settings">Language settings</string>
    <string name="prefs_languages_title">Choose language option</string>
    <string name="prefs_languages_summary">Please choose the language for the Wikipedia page. Default ist the language set on your phone.</string>
    <string name="prefs_language_wikilinks">Wikipedia links</string>
    <string name="prefs_header_user_settings">User settings</string>
    <string name="prefs_header_user_summary">Advantage user settings</string>
    <string name="prefs_header_language_settings">Language Settings</string>
    <string name="prefs_header_language_summary">Language specific settings</string>
    <string name="stockinfo_spacer">Spacer on top of fragment</string>
    <string name="stockinfo_image">Chart</string>
    <string name="label_version">Version:</string>
    <string name="label_copyright">Copyright:</string>
    <string name="data_copyright">Michael Mitterer, IT-Consulting and Development Limited, Austrian Branch</string>
    <string name="spacer">Space between Columns</string>
    <string name="about_title">About Nasdaq100</string>
    <string name="about_close">Close</string>
    <string name="menu_about">About</string>
    <string name="label_website">Website:</string>
    <string name="data_website">http://nasdaq100.mikemitterer.at/</string>
    <string name="label_github">GitHub:</string>
    <string name="data_github">https://github.com/MikeMitterer/Nasdaq100</string>
    <string name="label_license">License:</string>
    <string name="data_license_part1">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:</string>
    <string name="label_license_link"/>
    <string name="data_license_link">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="label_blank"/>
    <string name="data_license_part2">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="placeholder_for_admob">-- Banner --</string>
    <string name="prefs_sound_title">Sound</string>
    <string name="prefs_sound_summary">Play sound if you select a list entry</string>
</resources>
