<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_show_settings"
        android:enabled="true"
        android:showAsAction="ifRoom"
        android:title="@string/menu_show_settings"
        android:visible="true">
    </item>
    <group android:id="@+id/group1" android:visible="true" android:enabled="true" android:menuCategory="container">
    
    <item
        android:id="@+id/menu_sort_by_symbol"
        android:enabled="true"
        android:showAsAction="never|collapseActionView"
        android:title="@string/menu_sort_by_symbol"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_sort_by_weighting"
        android:enabled="true"
        android:showAsAction="never|collapseActionView"
        android:title="@string/menu_sort_by_weighting"
        android:visible="true">
    </item>
        
    </group>

</menu>